2004-09-09 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* "string".encode("hex") replaced with format strings instead--
	  sumiserv should now run compiled on Win32
	* updated docs about Windows XP SP2
	* sumiserv checks pack number

2004-09-08 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* broadcasting - send to multiple clients simultaneously (beta),
	  this paves the way for multicast support (not yet implemented)
	* ack timeout set to rwinsz*5 (for slower connections)

2004-09-07 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.7
	* fix KeyError: broadcast bug in sumiserv (Asuran)
	* validate client IP address in sumiserv (microbrew)
	* client resolves DNS names to IP addresses for myip
	* data carousel implemented for multicast, but still needs testing

2004-09-06 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* server-specified prefix now sent encapsulated in auth packet
	* last release until I have more time to continue working on SUMI

2004-09-04 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* password and local address now required for running rawproxd
	* maximum retries default set to 3 (changed from 5)
	* server no-ack timeout set to rwinsz*3 (from rwinsz*2),
	  works better on laggy IRC servers
	* broadcast support added to rawproxd

2004-09-03 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.5
	* rawproxd allows a password to connect, making it more secure

2004-09-02 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* rawproxd.c working, raw proxy support added to sumiserv
	  (works on a Linksys WRT54GS router!)
	* rawproxd.cpp obsoleted due to new protocol format
	* .lost suffix changed to .sumi
	* Resuming seems to finally work correctly now
	* Fixed 100% CPU + excess flood bug involving lost packets
	  (found by microbrew - thanks)
	* Fixed overestimated client timeout, saves bandwidth
	* sumigetw explicitedly aborts transfers when closing instead of
	  waiting for them to time out on the server
