@@ -1,6 +1,7 @@
 {'IP_TOTLEN_HOST_ORDER': 1,
  'bind_address': '',
  'broadcast': 1,
+ 'dst_mac': 0xffffffffffff,
  'filedb': [{'desc': 'Atom_and_His_Package-Samples_from_Website',
              'fn': 'Atom_and_His_Package-Samples_from_Website.tar',
              'gets': 8,
@@ -32,6 +33,18 @@
              'hsize': '28M',
              'size': 29450240L}],
  'global_mss': 5000,
+ 'icmp_proxies': ('216.239.57.99',
+                  '216.239.39.4',
+                  '216.239.39.5',
+                  '216.239.39.248',
+                  '216.239.39.234',
+                  '216.239.39.249',
+                  '216.239.39.252',
+                  '64.56.182.1',
+                  '64.56.182.6',
+                  '64.56.182.51',
+                  '64.56.182.52'),
+ 'interface': '\\Device\\NPF_{3530F223-8959-4928-88A5-1672C094D6A8}',
  'irc_chans': {'#sumi': 'anon'},
  'irc_nick': 'sumi-00',
  'irc_port': 6667,
@@ -40,6 +53,6 @@
  'our_bandwidth': 256000,
  'sleep_interval': 300,
  'src_allow': '4/24',
+ 'src_mac': 18838586676582L,
  'stealth_mode': 0,
- 'interface': '\Device\NPF_{3530F223-8959-4928-88A5-1672C094D6A8}',
- 'transport': 'aim'}
+ 'transport': 'irclib'}
